New in 1.4:

* Fixed <sys/time.h> vs. <time.h> confusion.
* Fixed off by one bug in the RVM error table.

New in 1.3:

* Applied RedHat build patches from Bruce Guenter.
* Merged debian packaging.
* Correctly using MAP_FIXED argument for anonymous mappings.

New in 1.2:

* Added rvm_release_segment() to libseg to free a loaded segment.
* Cleaning up initialized memory mappings in rds_zap_heap.
* Correctly linking librdslwp from the lwp compiled objects.
* Updated package descriptions & building against lwp-1.5.

New in 1.1:

* Fixed the RVM_EOFFSET bug.

New in 1.0:

* Fixed alignment problems on sparc32 platforms (Shafeeq).
* Extracted RVM out of the main Coda source tree.
* Using an automake/autoconf/libtool build environment.
* Creating shared libraries.
* Fixed some bugs in the testprograms.
* Reduced rvm locking overhead by about 50%.