@@ -46,7 +46,9 @@ AC_SUBST(LWPFLAGS)
 
 dnl Checks for header files.
 dnl Checks for typedefs.
+
 dnl Checks for compiler characteristics.
+CODA_DARWIN_BROKEN_CPP_WORKAROUND
 
 dnl Checks for library functions.
 AC_CHECK_FUNCS(strerror)
