@@ -43,7 +43,7 @@ extern rvm_length_t range_elims_vec[range_elims_len]; /* ranges eliminated by ra
                                                          coalesce histogram defs */
 extern rvm_length_t trans_elims_vec[trans_elims_len]; /* ranges eliminated by trans
                                                          coalesce histogram defs */
-rvm_length_t        trans_coalesces_vec[trans_coalesces_len]; /* transactions
+extern rvm_length_t trans_coalesces_vec[trans_coalesces_len]; /* transactions
                                                                  coalesed per flush */
 /* print rvm_offset_t */
 static int pr_offset(offset,stream)   
